[gd_scene load_steps=7 format=3 uid="uid://dbu3egheau2i3"]

[ext_resource type="Script" uid="uid://cx534fd032om2" path="res://Projectiles/projectile_general.gd" id="1_8lmer"]
[ext_resource type="Texture2D" uid="uid://d0c1wtyv5l07k" path="res://Assets/Graphics/sprites/sprites_general.png" id="2_wpdka"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvbw3"]
size = Vector2(48, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukwf1"]
size = Vector2(48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vds43"]
atlas = ExtResource("2_wpdka")
region = Rect2(1792, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jfau3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vds43")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[node name="player_projectile_basic" type="CharacterBody2D" groups=["player_projectile"]]
z_index = 5
collision_layer = 2
motion_mode = 1
floor_constant_speed = true
floor_max_angle = 1.22173
safe_margin = 1.0
script = ExtResource("1_8lmer")

[node name="scan" type="Area2D" parent="." groups=["player_projectile"]]
collision_layer = 2
collision_mask = 10

[node name="scan_collision" type="CollisionShape2D" parent="scan"]
shape = SubResource("RectangleShape2D_jvbw3")

[node name="main_collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ukwf1")

[node name="animation" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_jfau3")
animation = &"shoot"
autoplay = "shoot"

[node name="remove_delay" type="Timer" parent="."]

[connection signal="body_entered" from="scan" to="." method="_on_scan_body_entered"]
[connection signal="timeout" from="remove_delay" to="." method="_on_remove_delay_timeout"]
